--- a/styles/containers/section1.module.css
+++ b/styles/containers/section1.module.css
@@ -15,6 +15,7 @@
 @media (max-width: 768px) {
   .container {
     grid-template-columns: 1fr;
+    gap: none;
   }
 }
 
