--- a/styles/containers/section2.module.css
+++ b/styles/containers/section2.module.css
@@ -10,11 +10,12 @@
   grid-template-columns: 1fr 1fr;
   place-items: center;
   gap: 5rem;
-  min-height: 80vh;
+  min-height: 100vh;
 }
 @media (max-width: 768px) {
   .container {
     grid-template-columns: 1fr;
+    gap: 0;
   }
 }
 .container img {
